--- a/index.html
+++ b/index.html
@@ -797,8 +797,8 @@
             <div class="info-box">
               <i class="bx bxl-discord"></i>
               <h3>Join Discord</h3>
-              <p class="text-light">Moon Night<br>
-                <a target="_blank" href="https://discord.gg/yh3SgAuD">JOIN</a></p>
+              <p class="text-light">Liên Minh Huyền Thoại VN<br>
+                <a target="_blank" href="https://discord.gg/LienMinhHuyenThoai">JOIN</a></p>
             </div>
           </div>
           
